--- a/behavior_files/experiment.ini
+++ b/behavior_files/experiment.ini
@@ -1,6 +1,6 @@
 [Automaton]
 # Transition states:
-[Name] "Experiment"
+[Name] "Spiral"
 
 #       x     y     state   orientation
 [Start] 100   50   0       N
