Added color feature, added pausing ability.

--- a/behavior_files/experiment.ini
+++ b/behavior_files/experiment.ini
@@ -2,6 +2,9 @@
 # Transition states:
 [Name] "Spiral"
 
+#           R       G       B
+[Color]     .3      .5      .8
+
 #       x     y     state   orientation
 [Start] 550   280   0       N
 
