--- a/behavior_files/spawn2.ini
+++ b/behavior_files/spawn2.ini
@@ -5,6 +5,9 @@
 #       x     y     state   orientation
 [Start] 512   512   0       N
 
+#           R       G       B
+[Color]     1.      .5      0
+
 #        offnext onnext   offturn     onturn      offpaint    onpaint
 [State]  0        1       R           R           1           1
 [State]  0        1       N           N           0           0
@@ -13,6 +16,9 @@
 [Automaton]
 # Transition states:
 [Name] "Langton's Ant"
+
+#           R       G       B
+[Color]     0.      .5      .5
 
 #       x     y     state   orientation
 [Start] 256   256   0       N
